# konfiscator

./: .gitignore  Cargo.toml  Dockerfile  README.md  README.txt  _build.rs  build.rs  compile.sh  docker_ci.sh  entrypoint.sh  konfiscator_malloc.c  malloc.c  malloc.h  test.sh
.cargo/: config
driver-program/: malloc_test.c
konfiscator/src/: lib.rs
prometheus-metrics/: konfiscator_metrics.py
sbrsk/: Cargo.toml
sbrsk/src/: lib.rs
src/: konfiscator.c  konfiscator.h  konfiscator_stats.h  lib.rs  libc_malloc.rs  list.c  list.h  sbrk.rs  vec.rs
test/: list_test.c
