[package]
name = "konfiscator"
version = "0.1.0"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]
build = "build.rs"

[lib]
name = "konfiscator"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
lazy_static = "1.0.0"

[build-dependencies]
nix = "0.9"

[features]
default = ["vec"]
vec = []
