[package]
name = "konfiscator"
version = "0.1.0"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]

[lib]
name = "konfiscator"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
cfg-if = "0.1"
sbrsk = { version = "0.1.0", optional = true }

[features]
default = ["sbrk"]
sbrk = ["sbrsk"]
mmap = []
libc_malloc = []
